# ghostmesh

./: .gitignore  Cargo.toml  README.md  identity.key  identity_8080.key  identity_8082.key  identity_8084.key  identity_8085.key  run_listener.sh  start_cluster.sh
data/: storage_8070.json  storage_8080.json  storage_8090.json
doc/: RUN_INSTRUCTIONS.md  TRANSPORT_SWITCHING.md  USE_CASES.md  observability_plan.md  phase1_mvp.md  phase1_walkthrough.md  phase2_walkthrough.md  phase3_walkthrough.md  phase4_walkthrough.md  phase5_walkthrough.md  phase6_walkthrough.md  phase8_walkthrough.md  websocket_api.md
scripts/: ws_listener.py
src/: ble.rs  http.rs  main.rs  p2p.rs  state.rs  storage.rs  telemetry.rs
web/: index.html
