[package]
name = "ghostmesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "quic", "macros", "tcp", "ping"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
crdts = "7.0"
warp = "0.3"
tokio-stream = "0.1"
