[package]
name = "ghostmesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "quic", "macros", "tcp", "ping", "identify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
crdts = "7.0"
warp = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
btleplug = "0.11"
uuid = { version = "1.0", features = ["v4"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
